--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
       </div>
       <div>
-        <h4>Summary</h4>
+        <h4 id="summary">Summary</h4>
         <p>
           <font color="white">I like turtles.</font>
         </p>
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div>
-        <h4>Skills</h4>
+        <h4 class="skills-and-hobbies">Skills</h4>
           <font color="white">
             <ul>
               <li>HTML</li>
@@ -56,7 +56,7 @@
           </font>
       </div>
       <div>
-        <h4>Hobbies</h4>
+        <h4 class="skills-and-hobbies">Hobbies</h4>
         <ul>
           <font color="white">
             <li>Knitting</li>
