Let's Go Full Geocites

--- a/index.html
+++ b/index.html
@@ -16,51 +16,45 @@
       <h2>Customer Success Manager</h2>
       <h3>Chicago, IL</h3>
     </div>
-    <div style="margin-left:410px;">
+    <div>
       <div>
-        <h4>Connect With Me</h4>
+        <h4 class="section">Connect With Me</h4>
         <ul>
-          <li><a href="mailto:jsmith5829@gmail.com"><font color="white">Email</font></a></li>
-          <li><a href="http://twitter.com/jsmith5829"><font color="white">Twitter</font></a></li>
-          <li><a href="http://facebook.com/jsmith5829"><font color="white">Facebook</font></a></li>
+          <li><a href="mailto:jsmith5829@gmail.com">Email</a></li>
+          <li><a href="http://twitter.com/jsmith5829">Twitter</a></li>
+          <li><a href="http://facebook.com/jsmith5829">Facebook</a></li>
         </ul>
       </div>
       <div>
-        <h4 id="summary">Summary</h4>
+        <h4 class="section">Summary</h4>
         <p>
-          <font color="white">I like turtles.</font>
+          I like turtles.
         </p>
       </div>
       <div>
-        <h4>Experience</h4>
+        <h4 class="section">Experience</h4>
         <div>
-          <font color="white">
             <h5>Level 5 Golem</h5>
             <p>Rawr</p>
-          </font>
         </div>
         <div>
-          <font color="white">
             <h5>Dinosaur</h5>
             <p>Stone Age Strong</p>
-          </font>
         </div>
       </div>
       <div>
-        <h4 class="skills-and-hobbies">Skills</h4>
-          <font color="white">
+        <h4 class="section">Skills</h4>
             <ul>
               <li>HTML</li>
               <li>CSS</li>
+              <li>JavaScript</li>
             </ul>
           </font>
       </div>
       <div>
-        <h4 class="skills-and-hobbies">Hobbies</h4>
+        <h4 class="section">Hobbies</h4>
         <ul>
-          <font color="white">
             <li>Knitting</li>
-          </font>
         </ul>
       </div>
     </div>
