--- a/index.html
+++ b/index.html
@@ -1,62 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My First Site</title>
+  <title>Chicago Blackhawks</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="ChicagoBlackhawksFavicon.png" rel="icon" type="image/x-icon" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div id="wrapper">
-    <div align="center">
-      <h1>Jeff Smith</h1>
+  <div class="container-fluid">
+    <nav class="navbar navbar-default">
+      <ul class="nav nav-tabs nav-justified">
+        <li><a href="index.html"><i class="fa fa-trophy" aria-hidden="true"></i> Blackhawks</a></li>
+        <li><a href="page2.html"><i class="fa fa-users" aria-hidden="true"></i> Roster</a></li>
+        <li><a href="page3.html"><i class="fa fa-align-justify" aria-hidden="true"></i> History</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="container-fluid">
+    <div id="black-hawks-header" class="col-sm-6 col-sm-offset-3">
+      <h1>Chicago Blackhawks</h1>
       <p>
-        <img src="JeffSmithHeadshot.jpg" height="150px" border="2">
+        <img class="blackhawks-logo" src="ChicagoBlackhawks.png" height="100px">
       </p>
-      <h2>Customer Success Manager</h2>
-      <h3>Chicago, IL</h3>
+      <h2>2016-17 Season</h2>
     </div>
-    <div>
-      <div>
-        <h4 class="section">Connect With Me</h4>
-        <ul>
-          <li><a href="mailto:jsmith5829@gmail.com">Email</a></li>
-          <li><a href="http://twitter.com/jsmith5829">Twitter</a></li>
-          <li><a href="http://facebook.com/jsmith5829">Facebook</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="section">Summary</h4>
-        <p>
-          I like turtles.
-        </p>
-      </div>
-      <div>
-        <h4 class="section">Experience</h4>
-        <div>
-            <h5>Level 5 Golem</h5>
-            <p>Rawr</p>
-        </div>
-        <div>
-            <h5>Dinosaur</h5>
-            <p>Stone Age Strong</p>
-        </div>
-      </div>
-      <div>
-        <h4 class="section">Skills</h4>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-            </ul>
-          </font>
-      </div>
-      <div>
-        <h4 class="section">Hobbies</h4>
-        <ul>
-            <li>Knitting</li>
-        </ul>
-      </div>
+    <div class="col-sm-12">
+    </div>
+    <div class="col-sm-6 col-sm-offset-3">
+      <h4 align="middle">Welcome to my Chicago Blackhawks fanpage celebrating the 2016-2017 season. This is not the official website for the Chicago Blackhawks.</p>
+    </div>
+    <div class="col-sm-12">
+    </div>
+    <div class="col-sm-4 col-sm-offset-4" style="text-align: center;">
+      <a href="https://www.nhl.com/blackhawks" class="btn btn-default btn-blackhawks">Check Out the Official Blackhawks Website</a>
     </div>
   </div>
 </body>
