--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="ChicagoBlackhawksFavicon.png" rel="icon" type="image/x-icon" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
